--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>ADM | Shop Marketplace</title>
+<title>ADM | Apps</title>
 </head>
 <body bgcolor="#000000"
 text="#ffffff"
@@ -12,27 +12,27 @@ vlink="#000000">
 <br />
 
 <marquee behavior="slide" direction="left" scrollamount="30">
-<a href="http://www.ubuntu.com" target="_new"><img src="icons/adm64x64.png" title="ADM | Saphire Engine"></a>
+<a href="http://www.ubuntu.com"><img src="icons/adm64x64.png" title="ADM | Saphire Engine"></a>
 </marquee>
 
 <marquee behavior="slide" direction="left" scrollamount="30">
-<a href="http://www.ubuntu.com" target="_new"><img src="icons/ghost64x64.png" title="GHOST | Hidden Browsing Utility"></a>
+<a href="http://www.ubuntu.com"><img src="icons/ghost64x64.png" title="GHOST | Hidden Browsing Utility"></a>
 </marquee>
 
 <marquee behavior="slide" direction="left" scrollamount="30">
-<a href="http://www.ubuntu.com" target="_new"><img src="icons/cupcakes64x64.png" title="Cupcakes!"></a>
+<a href="http://www.ubuntu.com"><img src="icons/cupcakes64x64.png" title="Cupcakes!"></a>
 </marquee>
 
 <marquee behavior="slide" direction="left" scrollamount="30">
-<a href="http://www.ubuntu.com" target="_new"><img src="icons/hext64x64.png" title="HEXT | Text to Hex!"></a>
+<a href="http://www.ubuntu.com"><img src="icons/hext64x64.png" title="HEXT | Text to Hex!"></a>
 </marquee>
 
 <marquee behavior="slide" direction="left" scrollamount="30">
-<a href="http://www.ubuntu.com" target="_new"><img src="icons/webleaf64x64.png" title="WebLeaf | Web File Download Tool"></a>
+<a href="http://www.ubuntu.com"><img src="icons/webleaf64x64.png" title="WebLeaf | Web File Download Tool"></a>
 </marquee>
 
 <marquee behavior="slide" direction="left" scrollamount="30">
-<a href="http://www.ubuntu.com" target="_new"><img src="icons/popcorn64x64.png" title="POPCORN | Local and URL Video Player"></a>
+<a href="http://www.ubuntu.com"><img src="icons/popcorn64x64.png" title="POPCORN | Local and URL Video Player"></a>
 </marquee>
 
 </body>
