--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>ADM | Apps</title>
 </head>
-<body bgcolor="#000000"
+<body background="bg.png"
 text="#ffffff"
 link="#000000"
 alink="#000000"
