--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ vlink="#000000">
 <br />
 
 <marquee behavior="slide" direction="left" scrollamount="30">
-<a href="http://www.ubuntu.com"><img src="icons/adm64x64.png" align="absmiddle" title="ADM | Saphire Engine"><img src="icons/buy64x64.png" aliagn="absmiddle"></a>
+<a href="http://www.ubuntu.com"><img src="icons/adm64x64.png" title="ADM | Saphire Engine"></a>
 </marquee>
 
 <marquee behavior="slide" direction="left" scrollamount="30">
