--- a/index.html
+++ b/index.html
@@ -12,27 +12,27 @@ vlink="#000000">
 <br />
 
 <marquee behavior="slide" direction="left" scrollamount="30">
-<a href="https://apps.ubuntu.com/cat/applications/webdev/"><img src="icons/adm64x64.png" title="ADM | Saphire Engine"></a>
+<a href="apt://webdev"><img src="icons/adm64x64.png" title="ADM | Saphire Engine"></a>
 </marquee>
 
 <marquee behavior="slide" direction="left" scrollamount="30">
-<a href="https://apps.ubuntu.com/cat/applications/webdev/"><img src="icons/ghost64x64.png" title="GHOST | Hidden Browsing Utility"></a>
+<a href="apt://webdev"><img src="icons/ghost64x64.png" title="GHOST | Hidden Browsing Utility"></a>
 </marquee>
 
 <marquee behavior="slide" direction="left" scrollamount="30">
-<a href="https://apps.ubuntu.com/cat/applications/webdev/"><img src="icons/cupcakes64x64.png" title="Cupcakes!"></a>
+<a href="apt://webdev"><img src="icons/cupcakes64x64.png" title="Cupcakes!"></a>
 </marquee>
 
 <marquee behavior="slide" direction="left" scrollamount="30">
-<a href="https://apps.ubuntu.com/cat/applications/webdev/"><img src="icons/hext64x64.png" title="HEXT | Text to Hex!"></a>
+<a href="apt://webdev"><img src="icons/hext64x64.png" title="HEXT | Text to Hex!"></a>
 </marquee>
 
 <marquee behavior="slide" direction="left" scrollamount="30">
-<a href="https://apps.ubuntu.com/cat/applications/webdev/"><img src="icons/webleaf64x64.png" title="WebLeaf | Web File Download Tool"></a>
+<a href="apt://webdev"><img src="icons/webleaf64x64.png" title="WebLeaf | Web File Download Tool"></a>
 </marquee>
 
 <marquee behavior="slide" direction="left" scrollamount="30">
-<a href="https://apps.ubuntu.com/cat/applications/webdev/"><img src="icons/popcorn64x64.png" title="POPCORN | Local and URL Video Player"></a>
+<a href="apt://webdev"><img src="icons/popcorn64x64.png" title="POPCORN | Local and URL Video Player"></a>
 </marquee>
 
 </body>
