--- a/index.html
+++ b/index.html
@@ -12,27 +12,27 @@ vlink="#000000">
 <br />
 
 <marquee behavior="slide" direction="left" scrollamount="30">
-<a href="https://apps.ubuntu.com/cat/applications/webdev/"><img src="icons/adm64x64.png" title="ADM | Saphire Engine"><font face="ubuntu" size="3" color="#ffffff"><b> UCODE: saphire</b></font></a>
+<a href="https://apps.ubuntu.com/cat/applications/webdev/"><img src="icons/adm64x64.png" title="ADM | Saphire Engine"></a><font face="ubuntu" size="3" color="#ffffff"><b> UCODE: saphire</b></font>
 </marquee>
 
 <marquee behavior="slide" direction="left" scrollamount="30">
-<a href="https://apps.ubuntu.com/cat/applications/webdev/"><img src="icons/ghost64x64.png" title="GHOST | Hidden Browsing Utility"><font face="ubuntu" size="3" color="#ffffff"><b> UCODE: ghost</b></font></a>
+<a href="https://apps.ubuntu.com/cat/applications/webdev/"><img src="icons/ghost64x64.png" title="GHOST | Hidden Browsing Utility"></a><font face="ubuntu" size="3" color="#ffffff"><b> UCODE: ghost</b></font>
 </marquee>
 
 <marquee behavior="slide" direction="left" scrollamount="30">
-<a href="https://apps.ubuntu.com/cat/applications/webdev/"><img src="icons/cupcakes64x64.png" title="Cupcakes!"><font face="ubuntu" size="3" color="#ffffff"><b> UCODE: cupcakes</b></font></a>
+<a href="https://apps.ubuntu.com/cat/applications/webdev/"><img src="icons/cupcakes64x64.png" title="Cupcakes!"></a><font face="ubuntu" size="3" color="#ffffff"><b> UCODE: cupcakes</b></font>
 </marquee>
 
 <marquee behavior="slide" direction="left" scrollamount="30">
-<a href="https://apps.ubuntu.com/cat/applications/webdev/"><img src="icons/hext64x64.png" title="HEXT | Text to Hex!"><font face="ubuntu" size="3" color="#ffffff"><b> UCODE: hext</b></font></a>
+<a href="https://apps.ubuntu.com/cat/applications/webdev/"><img src="icons/hext64x64.png" title="HEXT | Text to Hex!"></a><font face="ubuntu" size="3" color="#ffffff"><b> UCODE: hext</b></font>
 </marquee>
 
 <marquee behavior="slide" direction="left" scrollamount="30">
-<a href="https://apps.ubuntu.com/cat/applications/webdev/"><img src="icons/webleaf64x64.png" title="WebLeaf | Web File Download Tool"><font face="ubuntu" size="3" color="#ffffff"><b> UCODE: webleaf</b></font></a>
+<a href="https://apps.ubuntu.com/cat/applications/webdev/"><img src="icons/webleaf64x64.png" title="WebLeaf | Web File Download Tool"></a><font face="ubuntu" size="3" color="#ffffff"><b> UCODE: webleaf</b></font>
 </marquee>
 
 <marquee behavior="slide" direction="left" scrollamount="30">
-<a href="https://apps.ubuntu.com/cat/applications/webdev/"><img src="icons/popcorn64x64.png" title="POPCORN | Local and URL Video Player"><font face="ubuntu" size="3" color="#ffffff"><b> UCODE: popcorn</b></font></a>
+<a href="https://apps.ubuntu.com/cat/applications/webdev/"><img src="icons/popcorn64x64.png" title="POPCORN | Local and URL Video Player"></a><font face="ubuntu" size="3" color="#ffffff"><b> UCODE: popcorn</b></font>
 </marquee>
 
 </body>
