--- a/index.html
+++ b/index.html
@@ -11,28 +11,49 @@ vlink="#000000">
 
 <br />
 
+<center>
+
+<font face="ubuntu" size="3" color="#ffffff">$5/Month</font>
+
+<br />
+
+<font face="ubuntu" size="2" color="#ffffff">Sign up for Apps Unlimited and get free copies of all ADM Ubuntu apps!</font>
+
+<br />
+<br />
+
+<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+<input type="hidden" name="cmd" value="_s-xclick">
+<input type="hidden" name="hosted_button_id" value="NZHXRN2VSEJRW">
+<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_subscribe_SM.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+</form>
+</center>
+
+<br />
+
 <marquee behavior="slide" direction="left" scrollamount="30">
-<a href="https://apps.ubuntu.com/cat/applications/webdev/"><img src="icons/adm64x64.png" title="ADM | Saphire Engine"></a><font face="ubuntu" size="3" color="#ffffff"><b> UCODE: saphire</b></font>
+<a href="https://apps.ubuntu.com/cat/applications/webdev/"><img src="icons/adm64x64.png" title="ADM | Saphire Engine"></a><font face="ubuntu" size="2" color="#ffffff"> UCODE = saphire</font>
 </marquee>
 
 <marquee behavior="slide" direction="left" scrollamount="30">
-<a href="https://apps.ubuntu.com/cat/applications/webdev/"><img src="icons/ghost64x64.png" title="GHOST | Hidden Browsing Utility"></a><font face="ubuntu" size="3" color="#ffffff"><b> UCODE: ghost</b></font>
+<a href="https://apps.ubuntu.com/cat/applications/webdev/"><img src="icons/ghost64x64.png" title="GHOST | Hidden Browsing Utility"></a><font face="ubuntu" size="2" color="#ffffff"> UCODE = ghost</font>
 </marquee>
 
 <marquee behavior="slide" direction="left" scrollamount="30">
-<a href="https://apps.ubuntu.com/cat/applications/webdev/"><img src="icons/cupcakes64x64.png" title="Cupcakes!"></a><font face="ubuntu" size="3" color="#ffffff"><b> UCODE: cupcakes</b></font>
+<a href="https://apps.ubuntu.com/cat/applications/webdev/"><img src="icons/cupcakes64x64.png" title="Cupcakes!"></a><font face="ubuntu" size="2" color="#ffffff"> UCODE = cupcakes</font>
 </marquee>
 
 <marquee behavior="slide" direction="left" scrollamount="30">
-<a href="https://apps.ubuntu.com/cat/applications/webdev/"><img src="icons/hext64x64.png" title="HEXT | Text to Hex!"></a><font face="ubuntu" size="3" color="#ffffff"><b> UCODE: hext</b></font>
+<a href="https://apps.ubuntu.com/cat/applications/webdev/"><img src="icons/hext64x64.png" title="HEXT | Text to Hex!"></a><font face="ubuntu" size="2" color="#ffffff"> UCODE = hext</font>
 </marquee>
 
 <marquee behavior="slide" direction="left" scrollamount="30">
-<a href="https://apps.ubuntu.com/cat/applications/webdev/"><img src="icons/webleaf64x64.png" title="WebLeaf | Web File Download Tool"></a><font face="ubuntu" size="3" color="#ffffff"><b> UCODE: webleaf</b></font>
+<a href="https://apps.ubuntu.com/cat/applications/webdev/"><img src="icons/webleaf64x64.png" title="WebLeaf | Web File Download Tool"></a><font face="ubuntu" size="2" color="#ffffff"> UCODE = webleaf</font>
 </marquee>
 
 <marquee behavior="slide" direction="left" scrollamount="30">
-<a href="https://apps.ubuntu.com/cat/applications/webdev/"><img src="icons/popcorn64x64.png" title="POPCORN | Local and URL Video Player"></a><font face="ubuntu" size="3" color="#ffffff"><b> UCODE: popcorn</b></font>
+<a href="https://apps.ubuntu.com/cat/applications/webdev/"><img src="icons/popcorn64x64.png" title="POPCORN | Local and URL Video Player"></a><font face="ubuntu" size="2" color="#ffffff"> UCODE = popcorn</font>
 </marquee>
 
 </body>
