--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ vlink="#000000">
 
 <br />
 
-<font face="ubuntu" size="2" color="#ffffff">Sign up for Apps Unlimited and get free copies of all ADM Ubuntu apps!</font>
+<font face="ubuntu" size="2" color="#ffffff">Sign up for Apps Unlimited to Download all ADM Ubuntu Applications for FREE!</font>
 
 <br />
 <br />
