--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@ vlink="#000000">
 <br />
 
 <marquee behavior="slide" direction="left" scrollamount="30">
+<font face="ubuntu" size="3" color="#ffffff">Ubuntu Apps..</font>
+</marquee>
+
+<marquee behavior="slide" direction="left" scrollamount="30">
 <a href="https://apps.ubuntu.com/cat/applications/webdev/"><img src="icons/adm64x64.png" title="ADM | Saphire Engine"></a><font face="ubuntu" size="2" color="#ffffff"> UCODE = saphire</font>
 </marquee>
 
