--- a/index.html
+++ b/index.html
@@ -56,5 +56,9 @@ vlink="#000000">
 <a href="https://apps.ubuntu.com/cat/applications/webdev/"><img src="icons/popcorn64x64.png" title="POPCORN | Local and URL Video Player"></a><font face="ubuntu" size="2" color="#ffffff"> UCODE = popcorn</font>
 </marquee>
 
+<marquee behavior="slide" direction="left" scrollamount="30">
+<a href="https://apps.ubuntu.com/cat/applications/webdev/"><img src="icons/bookmarks64x64.png" title="Bookmarks | Web Bookmark Manager"></a><font face="ubuntu" size="2" color="#ffffff"> UCODE = adm-bookmarks</font>
+</marquee>
+
 </body>
 </html>
