--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@ vlink="#000000">
 
 <center>
 
-<font face="ubuntu" size="4" color="#ffffff">$5/Month</font>
+<font face="ubuntu" size="4" color="#4c4c4c">$5/Month</font>
 
 <br />
 
-<font face="ubuntu" size="2" color="#ffffff">Sign up for Apps Unlimited to Download all ADM Ubuntu Applications for FREE!</font>
+<font face="ubuntu" size="2" color="#4c4c4c">Sign up for Apps Unlimited to Download all ADM Ubuntu Applications for FREE!</font>
 
 <br />
 <br />
