--- a/index.html
+++ b/index.html
@@ -62,5 +62,9 @@ vlink="#000000">
 <a href="https://apps.ubuntu.com/cat/applications/webdev/"><img src="icons/bookmarks64x64.png" title="Bookmarks | Web Bookmark Manager"></a><font face="ubuntu" size="2" color="#ffffff"> UCODE = adm-bookmarks</font>
 </marquee>
 
+<marquee behavior="slide" direction="left" scrollamount="30">
+<a href="https://apps.ubuntu.com/cat/applications/webdev/"><img src="icons/pikachu64x64.png" title="Pikachu | A Pet Pikachu???"></a><font face="ubuntu" size="2" color="#ffffff"> UCODE = pikachu</font>
+</marquee>
+
 </body>
 </html>
