--- a/index.html
+++ b/index.html
@@ -66,5 +66,9 @@ vlink="#000000">
 <a href="https://apps.ubuntu.com/cat/applications/webdev/"><img src="icons/pikachu64x64.png" title="Pikachu | A Pet Pikachu???"></a><font face="ubuntu" size="2" color="#ffffff"> UCODE = pikachu</font>
 </marquee>
 
+<marquee behavior="slide" direction="left" scrollamount="30">
+<a href="https://apps.ubuntu.com/cat/applications/webdev/"><img src="icons/ghost-gmail64x64.png" title="GHOST-Gmail | GHOST for Gmail!"></a><font face="ubuntu" size="2" color="#ffffff"> UCODE = ghost-gmail</font>
+</marquee>
+
 </body>
 </html>
