--- a/index.html
+++ b/index.html
@@ -70,5 +70,9 @@ vlink="#000000">
 <a href="https://apps.ubuntu.com/cat/applications/webdev/"><img src="icons/ghost-gmail64x64.png" title="GHOST-Gmail | GHOST for Gmail!"></a><font face="ubuntu" size="2" color="#ffffff"> UCODE = ghost-gmail</font>
 </marquee>
 
+<marquee behavior="slide" direction="left" scrollamount="30">
+<a href="https://apps.ubuntu.com/cat/applications/webdev/"><img src="icons/okcupid64x64.png" title="Okcupid | Manage your Okcupid account on Ubuntu!"></a><font face="ubuntu" size="2" color="#ffffff"> UCODE = adm-okcupid</font>
+</marquee>
+
 </body>
 </html>
