--- a/index.html
+++ b/index.html
@@ -74,5 +74,9 @@ vlink="#000000">
 <a href="https://apps.ubuntu.com/cat/applications/webdev/"><img src="icons/okcupid64x64.png" title="Okcupid | Manage your Okcupid account on Ubuntu!"></a><font face="ubuntu" size="2" color="#ffffff"> UCODE = adm-okcupid</font>
 </marquee>
 
+<marquee behavior="slide" direction="left" scrollamount="30">
+<a href="https://apps.ubuntu.com/cat/applications/fusez/"><img src="icons/fusez64x64.png" title="Fusez | HTML SDK tool!"></a><font face="ubuntu" size="2" color="#ffffff"> UCODE = fusez</font>
+</marquee>
+
 </body>
 </html>
