--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ vlink="#000000">
 
 <br />
 
-<font face="ubuntu" size="2" color="#4c4c4c">Sign up for Apps Unlimited to Download all ADM Ubuntu Applications for FREE!</font>
+<font face="ubuntu" size="2" color="#4c4c4c">Sign up for ADM Unlimited to recieve all ADM Services for FREE!</font>
 
 <br />
 <br />
@@ -76,6 +76,10 @@ vlink="#000000">
 
 <marquee behavior="slide" direction="left" scrollamount="30">
 <a href="https://apps.ubuntu.com/cat/applications/fusez/"><img src="icons/fusez64x64.png" title="Fusez | HTML SDK tool!"></a><font face="ubuntu" size="2" color="#ffffff"> UCODE = fusez</font>
+</marquee>
+
+<marquee behavior="slide" direction="left" scrollamount="30">
+<a href="https://apps.ubuntu.com/cat/applications/fusez/"><img src="icons/facebook64x64.png" title="ADM Facebook | Desktop Facebook Manager!"></a><font face="ubuntu" size="2" color="#ffffff"> UCODE = adm-facebook</font>
 </marquee>
 
 </body>
