--- a/index.html
+++ b/index.html
@@ -82,5 +82,9 @@ vlink="#000000">
 <a href="https://apps.ubuntu.com/cat/applications/fusez/"><img src="icons/facebook64x64.png" title="ADM Facebook | Desktop Facebook Manager!"></a><font face="ubuntu" size="2" color="#ffffff"> UCODE = adm-facebook</font>
 </marquee>
 
+<marquee behavior="slide" direction="left" scrollamount="30">
+<a href="https://apps.ubuntu.com/cat/applications/fusez/"><img src="icons/cashier64x64.png" title="CASHIER | Your very own, desktop cash register!"></a><font face="ubuntu" size="2" color="#ffffff"> UCODE = cashier</font>
+</marquee>
+
 </body>
 </html>
